--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "async": "^3.2.3",
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
