--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "async": "^3.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "next": "12.1.6",
     "react": "18.1.0",
